--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
     <div class="projects">
       <div class="item">
         <a href="https://www.noktahan.com.tr">
-          <img src="../img/projects/nokta.png" alt="Project" />
+          <img src="img/projects/nokta.png" alt="Project" />
         </a>
         <a href="https://www.noktahan.com.tr" class="btn-light">
           <i class="fas fa-eye"></i> Project
@@ -58,7 +58,7 @@
       </div>
       <div class="item">
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage">
-          <img src="../img/projects/apptheme.png" alt="Project" />
+          <img src="img/projects/apptheme.png" alt="Project" />
         </a>
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage" class="btn-light">
           <i class="fas fa-eye"></i> Project
@@ -69,7 +69,7 @@
       </div>
       <div class="item">
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages">
-          <img src="../img/projects/imageslider.png" alt="Project" />
+          <img src="img/projects/imageslider.png" alt="Project" />
         </a>
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages" class="btn-light">
           <i class="fas fa-eye"></i> Project
@@ -80,7 +80,7 @@
       </div>
       <div class="item">
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page">
-          <img src="../img/projects/mytunes.png" alt="Project" />
+          <img src="img/projects/mytunes.png" alt="Project" />
         </a>
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page" class="btn-light">
           <i class="fas fa-eye"></i> Project
@@ -91,7 +91,7 @@
       </div>
       <div class="item">
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page">
-          <img src="../img/projects/landing.png" alt="Project" />
+          <img src="img/projects/landing.png" alt="Project" />
         </a>
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page" class="btn-light">
           <i class="fas fa-eye"></i> Project
