--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="../dist/css/all.css" />
-  <link rel="stylesheet" href="../dist/css/main.css" />
+  <link rel="stylesheet" href="css/all.css" />
+  <link rel="stylesheet" href="css/main.css" />
   <title>About Me</title>
 </head>
 
@@ -88,7 +88,7 @@
     Copyright &copy; 2019
   </footer>
 
-  <script src="../dist/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
