--- a/work.html
+++ b/work.html
@@ -57,6 +57,17 @@
         </a>
       </div>
       <div class="item">
+        <a href="https://burak-selvi.github.io/forkify-webapp/">
+          <img src="img/projects/forkify.png" alt="Project" />
+        </a>
+        <a href="https://burak-selvi.github.io/forkify-webapp/" class="btn-light">
+          <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="https://github.com/burak-selvi/forkify-webapp" class="btn-dark">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+      <div class="item">
         <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage">
           <img src="img/projects/apptheme.png" alt="Project" />
         </a>
