--- a/work.html
+++ b/work.html
@@ -46,13 +46,13 @@
     </h2>
     <div class="projects">
       <div class="item">
-        <a href="https://www.noktahan.com.tr">
+        <a href="https://burak-selvi.github.io/noktahan-website-project">
           <img src="img/projects/nokta.png" alt="Project" />
         </a>
-        <a href="https://www.noktahan.com.tr" class="btn-light">
+        <a href="https://burak-selvi.github.io/noktahan-website-project" class="btn-light">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="" class="btn-dark">
+        <a href="https://github.com/burak-selvi/noktahan-website-project" class="btn-dark">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
