--- a/work.html
+++ b/work.html
@@ -46,68 +46,87 @@
     </h2>
     <div class="projects">
       <div class="item">
-        <a href="https://burak-selvi.github.io/noktahan-website-project">
+        <a href="https://burak-selvi.github.io/noktahan-website-project" target="_blank">
           <img src="img/projects/nokta.png" alt="Project" />
         </a>
-        <a href="https://burak-selvi.github.io/noktahan-website-project" class="btn-light">
+        <a href="https://burak-selvi.github.io/noktahan-website-project" class="btn-light" target="_blank">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="https://github.com/burak-selvi/noktahan-website-project" class="btn-dark">
+        <a href="https://github.com/burak-selvi/noktahan-website-project" class="btn-dark" target="_blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
       <div class="item">
-        <a href="https://burak-selvi.github.io/forkify-webapp/">
+        <a href="https://burak-selvi.github.io/forkify-webapp" target="_blank">
           <img src="img/projects/forkify.png" alt="Project" />
         </a>
-        <a href="https://burak-selvi.github.io/forkify-webapp/" class="btn-light">
+        <a href="https://burak-selvi.github.io/forkify-webapp" class="btn-light" target="_blank">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="https://github.com/burak-selvi/forkify-webapp" class="btn-dark">
+        <a href="https://github.com/burak-selvi/forkify-webapp" class="btn-dark" target="_blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
       <div class="item">
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage">
+        <a href="https://brave-curran-4c70e8.netlify.com" target="_blank">
+          <img src="img/projects/newsgrid.png" alt="Project" />
+        </a>
+        <a href="https://brave-curran-4c70e8.netlify.com" class="btn-light" target="_blank">
+          <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="https://github.com/burak-selvi/Newsgrid-website" class="btn-dark" target="_blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+      <div class="item">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage" target="_blank">
           <img src="img/projects/apptheme.png" alt="Project" />
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage" class="btn-light">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage" class="btn-light"
+          target="_blank">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage" class="btn-dark">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/AppTheme-webpage" class="btn-dark"
+          target="_blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
       <div class="item">
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages" target="_blank">
           <img src="img/projects/imageslider.png" alt="Project" />
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages" class="btn-light">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages" class="btn-light"
+          target="_blank">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages" class="btn-dark">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/FullScreenImageSlider-pages" class="btn-dark"
+          target="_blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
       <div class="item">
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page" target="_blank">
           <img src="img/projects/mytunes.png" alt="Project" />
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page" class="btn-light">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page" class="btn-light"
+          target="_blank">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page" class="btn-dark">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/ResponsiveLanding-page" class="btn-dark"
+          target="_blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
       <div class="item">
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page" target="_blank">
           <img src="img/projects/landing.png" alt="Project" />
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page" class="btn-light">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page" class="btn-light"
+          target="_blank">
           <i class="fas fa-eye"></i> Project
         </a>
-        <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page" class="btn-dark">
+        <a href="https://github.com/burak-selvi/Web-pages/tree/master/SplitLanding-page" class="btn-dark"
+          target="_blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
