--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
         <h3>Design Medya</h3>
         <h6>Front-end Developer</h6>
         <p>
-          Design Medya is a small digital agency for creating custom websites for vaious companies. I am currently
-          working as a freelancer.
+          Design Medya is a small digital agency for creating custom websites for vaious companies. I worked for 1 month
+          as a freelance fron-end developer.
         </p>
       </div>
       <div class="job job-2">
