--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
         <h6>Front-end Developer</h6>
         <p>
           Design Medya is a small digital agency for creating custom websites for vaious companies. I worked for 1 month
-          as a freelance fron-end developer.
+          as a freelance front-end developer.
         </p>
       </div>
       <div class="job job-2">
