--- a/work.html
+++ b/work.html
@@ -46,6 +46,28 @@
     </h2>
     <div class="projects">
       <div class="item">
+        <a href="https://brkslv-todo-project.netlify.app" target="_blank">
+          <img src="img/projects/todo.png" alt="Project" />
+        </a>
+        <a href="https://brkslv-todo-project.netlify.app" class="btn-light" target="_blank">
+          <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="https://github.com/burak-selvi/todo-board-project" class="btn-dark" target="_blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+      <div class="item">
+        <a href="https://test.acikveriturkiye.org" target="_blank">
+          <img src="img/projects/acikveri.png" alt="Project" />
+        </a>
+        <a href="https://test.acikveriturkiye.org" class="btn-light" target="_blank">
+          <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="https://test.acikveriturkiye.org" class="btn-dark" target="_blank">
+          <i class="fab fa-github"></i> -
+        </a>
+      </div>
+      <div class="item">
         <a href="https://brkslv-react-phone-store.netlify.com" target="_blank">
           <img src="img/projects/phonestore.png" alt="Project" />
         </a>
