--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       Let me tell you a few things...
     </h2>
     <div class="about-info">
-      <img src="img/portrait.jpg" alt="Burak Selvi" class="bio-image" />
+      <img src="img/profil.jpg" alt="Burak Selvi" class="bio-image" />
       <div class="bio">
         <h3 class="text-secondary">About Me</h3>
         <p>
